apps/apparatus/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ts-apparatus
  namespace: echo
spec:
  selector:
    app: ts-apparatus
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: https
      port: 443
      targetPort: 8443
  type: ClusterIP
